<resources>
    <string name="app_name">MUV-Tracker</string>

    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_home_news_and_announcement">News And Announcement</string>
    <string name="title_routes">Routes</string>
    <string name="title_tickets">Tickets</string>
    <string name="title_profile">Profile</string>
    <string name="title_logout">Log Out</string>

    <string name="valid_names">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz nbsp</string>
    <string name="valid_email">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@._</string>
    <string name="valid_numbers">0987654321</string>


    <!--     For Sign up and Sign In Form -->
    <string name="sign_in">Sign in your Account</string>
    <string name="otp_in">OTP Verification</string>
    <string name="sign_up">Create your Account</string>
    <string name="log_in">LOGIN</string>
    <string name="have_account">Already Have an Account?</string>
    <string name="dont_have_account">Don\'t Have an Account?</string>
    <string name="do_have_account">Do you have an Account?</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="signIn">Sign In</string>
    <string name="register">Sign up</string>
    <string name="four_pin">Enter 4 Digit Pin</string>
    <string name="enter_otp">Enter OTP Code</string>
    <string name="verify">VERIFY</string>
    <string name="phone_num">Enter your Number</string>

</resources>