<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_routes"
        android:icon="@drawable/ic_muv_routes"
        android:title="@string/title_routes" />

    <item
        android:id="@+id/navigation_tickets"
        android:icon="@drawable/ic_muv_ticket"
        android:title="@string/title_tickets" />

    <!--   <item android:id="@+id/itm_person"
           android:icon="@drawable/ic_person"
           android:title="@string/title_profile"
           app:showAsAction="ifRoom">
           <menu>
               <item android:id="@+id/itm_profile"
                   android:icon="@drawable/ic_person"
                   android:title="@string/title_profile"
                   app:showAsAction="never"/>
               <item android:id="@+id/itm_logout"
                   android:icon="@drawable/ic_person"
                   android:title="@string/title_logout"
                   app:showAsAction="never"/>
           </menu>
       </item>-->

</menu>